--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -36,80 +36,9 @@
             margin: 0px 5px;
         }
     }
-}
-
-@media (max-width: 600px) {
-    .listBlock {
-        flex-direction: column;
-        &__content {
-            display: grid;
-            grid-template-columns: auto;
-            gap: 10px;
-            .item {
-                text-align: center;
-            }
-        }
+    .item {
+        margin: 10px;
+        padding: 8px;
+        border: 1px solid black;
     }
-}
-
-.bg-white {
-    background: rgb(93, 85, 85);
-    background: linear-gradient(
-        0deg,
-        rgba(93, 85, 85, 1) 23%,
-        rgba(135, 134, 139, 1) 70%
-    ) !important;
-    .nav-link {
-        color: white !important;
-    }
-    .navbar-brand {
-        color: white;
-    }
-}
-
-.pb-4,
-.py-4 {
-    background-color: rgb(182, 169, 169);
-
-    .card-header {
-        color: white;
-        background: rgb(93, 85, 85);
-        background: linear-gradient(
-            0deg,
-            rgba(93, 85, 85, 1) 23%,
-            rgba(135, 134, 139, 1) 70%
-        );
-    }
-    .card {
-        border: 1px solid rgba(93, 85, 85, 1);
-        box-shadow: 1px 3px 5px rgba(93, 85, 85, 1);
-        margin-bottom: 150px;
-        .pagination {
-            .page-link {
-                background-color: rgb(126, 123, 123);
-                color: white;
-            }
-        }
-        form {
-            background-color: rgb(214, 203, 203);
-        }
-        .card-body {
-            background-color: rgb(214, 203, 203);
-            .list-group-item {
-                background-color: rgb(238, 227, 227);
-                form {
-                    background-color: rgb(238, 227, 227);
-                }
-                p {
-                    padding: 10px;
-                    margin: 0;
-                    font-weight: normal;
-                }
-            }
-        }
-    }
-}
-
-.form-group {
-    margin-bottom: 2rem;
 }
